--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -53,11 +53,21 @@ img {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(136, 136, 136, 0.5);
+  background: rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
   &:hover {
-    background: rgba(136, 136, 136, 0.7);
+    background: rgba(0, 0, 0, 0.3);
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  ::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.2);
+
+    &:hover {
+      background: rgba(255, 255, 255, 0.3);
+    }
   }
 }
 
